src/test/resources/invalid_tests/MissingOutput.cnna
architecture MissingOutput{
    def input in

    in ->
    fullyConnected(units=64)
}